--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "devDependencies": {
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "standard": "^17.0.0"
   },
   "standard": {
-    "env": [ "mocha" ]
+    "env": [
+      "mocha"
+    ]
   },
   "author": "Henry",
   "license": "ISC",
